<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundMain"
    tools:context="com.amilaz.bluetoothpaymentexample.MainActivity">

    <EditText
        android:id="@+id/ed_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_money_here"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_receive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_margin"
        android:text="@string/let_receive" />

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_margin"
        android:text="@string/let_pay" />

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/min_margin"
        android:layout_weight="1" >

            <ProgressBar
                android:id="@+id/progress_load"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:indeterminate="true"
                android:layout_centerInParent="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progress_load"
                android:layout_centerHorizontal="true"
                android:text="@string/please_wait_for_other_device"/>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/confirm_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/min_margin"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_payment_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/min_margin"
            android:text="@string/you_pay_xxx_bath"
            android:layout_alignParentTop="true"/>

        <EditText
            android:id="@+id/ed_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_payment_info"
            android:hint="@string/enter_your_pin"
            android:inputType="numberPassword"
            android:maxLength="6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_pin"
            android:layout_marginTop="@dimen/min_margin"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/min_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/empty_view"/>


</LinearLayout>
